--- a/src/main/resources/first_screen.fxml
+++ b/src/main/resources/first_screen.fxml
@@ -85,5 +85,12 @@
       <Label layoutX="547.0" layoutY="186.0" text="Укажите число параллельных цепочек" />
       <TextField fx:id="numberBattery" layoutX="907.0" layoutY="189.0" prefHeight="25.0" prefWidth="68.0" text="4" />
       <Label layoutX="547.0" layoutY="199.0" text="из аккумуляторов" />
+      <TextField fx:id="timeInBoost" layoutX="911.0" layoutY="421.0" prefHeight="25.0" prefWidth="68.0" text="480" />
+      <Label layoutX="547.0" layoutY="427.0" text="Введите время работы в режиме Boost" />
+      <Label layoutX="988.0" layoutY="426.0" text="мин" />
+      <Label layoutX="988.0" layoutY="459.0" text="мин" />
+      <Label layoutX="546.0" layoutY="453.0" text="Введите время задержки повторного включения" />
+      <TextField fx:id="delayBoost" layoutX="911.0" layoutY="454.0" prefHeight="25.0" prefWidth="68.0" text="15" />
+      <Label layoutX="546.0" layoutY="465.0" text="режима Boost" />
    </children>
 </AnchorPane>
