--- a/src/main/resources/first_screen.fxml
+++ b/src/main/resources/first_screen.fxml
@@ -5,93 +5,93 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1055.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="configure_ups.view.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="configure_ups.view.Controller">
    <children>
       <Label layoutX="123.0" layoutY="10.0" text="Введите характеристику датчика температуры" />
-      <Label layoutX="14.0" layoutY="45.0" text="Введите значение напряжения при 0 град. С" />
-      <TextField fx:id="mVAtZeroDeg" layoutX="352.0" layoutY="40.0" prefHeight="25.0" prefWidth="98.0" text="500" />
+      <Label layoutX="13.0" layoutY="45.0" text="1.1 Введите значение напряжения при 0 град. С" />
+      <TextField fx:id="mVAtZeroDeg" layoutX="367.0" layoutY="40.0" prefHeight="25.0" prefWidth="98.0" text="500" />
       <Label layoutX="475.0" layoutY="45.0" text="мВ" />
-      <Label layoutX="14.0" layoutY="78.0" text="Введите приращение напряжения за 1 град. С" />
-      <TextField fx:id="changingMVPerOneDeg" layoutX="352.0" layoutY="73.0" prefHeight="25.0" prefWidth="98.0" text="10" />
+      <Label layoutX="14.0" layoutY="78.0" text="1.2 Введите приращение напряжения за 1 град. С" />
+      <TextField fx:id="changingMVPerOneDeg" layoutX="367.0" layoutY="73.0" prefHeight="25.0" prefWidth="98.0" text="10" />
       <Label layoutX="475.0" layoutY="78.0" text="мВ" />
       <Label layoutX="50.0" layoutY="111.0" text="Введите температурно-вольтовую характеристику аккумулятора" />
       <Label layoutX="102.0" layoutY="132.0" text="Введите температурные данные для режима Float" />
-      <Label layoutX="14.0" layoutY="156.0" text="Задайте минимальное значение температуры" />
-      <TextField fx:id="minTempFloat" layoutX="352.0" layoutY="151.0" prefHeight="25.0" prefWidth="98.0" text="0" />
+      <Label layoutX="14.0" layoutY="156.0" text="2.1 Задайте минимальное значение температуры" />
+      <TextField fx:id="minTempFloat" layoutX="367.0" layoutY="151.0" prefHeight="25.0" prefWidth="98.0" text="0" />
       <Label layoutX="475.0" layoutY="156.0" text="град. С" />
-      <Label layoutX="14.0" layoutY="186.0" text="Задайте первую среднюю точку" />
-      <TextField fx:id="tempFirstMidPointFloat" layoutX="352.0" layoutY="181.0" prefHeight="25.0" prefWidth="98.0" text="15" />
+      <Label layoutX="14.0" layoutY="186.0" text="2.2 Задайте первую среднюю точку" />
+      <TextField fx:id="tempFirstMidPointFloat" layoutX="367.0" layoutY="181.0" prefHeight="25.0" prefWidth="98.0" text="15" />
       <Label layoutX="475.0" layoutY="186.0" text="град. С" />
       <Label layoutX="475.0" layoutY="217.0" text="град. С" />
-      <TextField fx:id="tempSecondMidPointFloat" layoutX="352.0" layoutY="212.0" prefHeight="25.0" prefWidth="98.0" text="35" />
-      <Label layoutX="14.0" layoutY="217.0" text="Задайте вторую среднюю точку" />
+      <TextField fx:id="tempSecondMidPointFloat" layoutX="367.0" layoutY="212.0" prefHeight="25.0" prefWidth="98.0" text="35" />
+      <Label layoutX="14.0" layoutY="217.0" text="2.3 Задайте вторую среднюю точку" />
       <Label layoutX="475.0" layoutY="248.0" text="град. С" />
-      <TextField fx:id="maxTempFloat" layoutX="352.0" layoutY="243.0" prefHeight="25.0" prefWidth="98.0" text="50" />
-      <Label layoutX="14.0" layoutY="248.0" text="Задайте максимальное значение температуры" />
+      <TextField fx:id="maxTempFloat" layoutX="367.0" layoutY="243.0" prefHeight="25.0" prefWidth="98.0" text="50" />
+      <Label layoutX="14.0" layoutY="248.0" text="2.4 Задайте максимальное значение температуры" />
       <Label layoutX="110.0" layoutY="282.0" text="Введите температурные данные для режима Boost" />
       <Label layoutX="475.0" layoutY="312.0" text="град. С" />
-      <TextField fx:id="minTempBoost" layoutX="352.0" layoutY="307.0" prefHeight="25.0" prefWidth="98.0" text="30" />
-      <Label layoutX="14.0" layoutY="312.0" text="Задайте минимальное значение температуры" />
-      <Label layoutX="14.0" layoutY="346.0" text="Задайте максимальное значение температуры" />
-      <TextField fx:id="maxTempBoost" layoutX="352.0" layoutY="341.0" prefHeight="25.0" prefWidth="98.0" text="45" />
+      <TextField fx:id="minTempBoost" layoutX="367.0" layoutY="307.0" prefHeight="25.0" prefWidth="98.0" text="30" />
+      <Label layoutX="14.0" layoutY="312.0" text="2.5 Задайте минимальное значение температуры" />
+      <Label layoutX="14.0" layoutY="346.0" text="2.6 Задайте максимальное значение температуры" />
+      <TextField fx:id="maxTempBoost" layoutX="367.0" layoutY="341.0" prefHeight="25.0" prefWidth="98.0" text="45" />
       <Label layoutX="475.0" layoutY="346.0" text="град. С" />
       <Label layoutX="90.0" layoutY="384.0" text="Введите значения зарядного напряжения для режимов" />
       <Label layoutX="475.0" layoutY="492.0" text="мВ/эл" />
-      <TextField fx:id="outputFloatMinimum" layoutX="352.0" layoutY="487.0" prefHeight="25.0" prefWidth="98.0" text="2225" />
-      <Label layoutX="14.0" layoutY="492.0" text="Минимальное значение для режима Float" />
-      <Label layoutX="14.0" layoutY="525.0" text="Минимальное значение для режима Boost" />
-      <TextField fx:id="outputBoostMinimum" layoutX="352.0" layoutY="520.0" prefHeight="25.0" prefWidth="98.0" text="2300" />
+      <TextField fx:id="outputFloatMinimum" layoutX="367.0" layoutY="487.0" prefHeight="25.0" prefWidth="98.0" text="2225" />
+      <Label layoutX="14.0" layoutY="492.0" text="3.3 Минимальное значение для режима Float" />
+      <Label layoutX="14.0" layoutY="525.0" text="3.4 Минимальное значение для режима Boost" />
+      <TextField fx:id="outputBoostMinimum" layoutX="367.0" layoutY="520.0" prefHeight="25.0" prefWidth="98.0" text="2300" />
       <Label layoutX="475.0" layoutY="525.0" text="мВ/эл" />
-      <Label layoutX="14.0" layoutY="427.0" text="Максимальное значение для (Float и Boost)" />
-      <TextField fx:id="outputMaximum" layoutX="352.0" layoutY="422.0" prefHeight="25.0" prefWidth="98.0" text="2400" />
+      <Label layoutX="14.0" layoutY="427.0" text="3.1 Максимальное значение для (Float и Boost)" />
+      <TextField fx:id="outputMaximum" layoutX="367.0" layoutY="422.0" prefHeight="25.0" prefWidth="98.0" text="2400" />
       <Label layoutX="475.0" layoutY="427.0" text="мВ/эл" />
-      <Button fx:id="write" layoutX="933.0" layoutY="694.0" mnemonicParsing="false" onAction="#setWriteParams" text="Записать" />
-      <Button fx:id="clear" layoutX="836.0" layoutY="694.0" mnemonicParsing="false" onAction="#handleDelete" text="Очистить" />
-      <Button fx:id="previousField" layoutX="555.0" layoutY="694.0" mnemonicParsing="false" onAction="#setBasicParams" text="Вернуть первоначальные значения" />
+      <Button fx:id="write" layoutX="933.0" layoutY="694.0" mnemonicParsing="false" onAction="#setWriteParams" text="Записать" AnchorPane.rightAnchor="30.0" />
+      <Button fx:id="clear" layoutX="836.0" layoutY="694.0" mnemonicParsing="false" onAction="#handleDelete" text="Очистить" AnchorPane.rightAnchor="130.0" />
+      <Button fx:id="previousField" layoutX="555.0" layoutY="694.0" mnemonicParsing="false" onAction="#setBasicParams" text="Вернуть первоначальные значения" AnchorPane.rightAnchor="240.0" />
       <Label layoutX="475.0" layoutY="459.0" text="мВ/эл" />
-      <TextField fx:id="outputMiddle" layoutX="352.0" layoutY="454.0" prefHeight="25.0" prefWidth="98.0" text="2300" />
-      <Label layoutX="14.0" layoutY="459.0" text="Значение средней точки для режима Float" />
+      <TextField fx:id="outputMiddle" layoutX="367.0" layoutY="454.0" prefHeight="25.0" prefWidth="98.0" text="2300" />
+      <Label layoutX="14.0" layoutY="459.0" text="3.2 Значение средней точки для режима Float" />
       <TextField fx:id="coefficientOfCalibration" layoutX="434.0" layoutY="631.0" prefHeight="25.0" prefWidth="83.0" text="1.108" />
-      <Label layoutX="14.0" layoutY="611.0" text="Задайте коэффициент преобразования базовой шкалы &quot;мВ на элемент&quot;" />
+      <Label layoutX="14.0" layoutY="611.0" text="4. Задайте коэффициент преобразования базовой шкалы &quot;мВ на элемент&quot;" />
       <Label layoutX="14.0" layoutY="636.0" text="для получения калиброванного управляющего напряжения" />
-      <Label layoutX="547.0" layoutY="393.0" text="(значение относительно номинального тока)" />
-      <TextField fx:id="thresholdBoostEnding" layoutX="911.0" layoutY="381.0" prefHeight="25.0" prefWidth="68.0" text="0.25" />
-      <Label layoutX="547.0" layoutY="380.0" text="Задайте условие окончания ускоренного заряда" />
-      <Label layoutX="547.0" layoutY="342.0" text="Задайте порог применения ускоренного заряда" />
-      <TextField fx:id="thresholdForBoost" layoutX="911.0" layoutY="343.0" prefHeight="25.0" prefWidth="68.0" text="0.9" />
-      <Label layoutX="547.0" layoutY="355.0" text="(значение относительно номинального тока)" />
-      <Label layoutX="547.0" layoutY="305.0" text="Задайте предельный ток заряда" />
-      <TextField fx:id="maxChargCurrent" layoutX="909.0" layoutY="308.0" prefHeight="25.0" prefWidth="68.0" text="3.5" />
-      <Label layoutX="547.0" layoutY="318.0" text="(значение относительно номинального тока)" />
-      <Label layoutX="547.0" layoutY="285.0" text="(значение относительно номинального тока)" />
-      <TextField fx:id="chargingCurrent" layoutX="908.0" layoutY="271.0" prefHeight="25.0" prefWidth="68.0" text="2.8" />
-      <Label layoutX="547.0" layoutY="272.0" text="Задайте ток заряда" />
-      <Label layoutX="545.0" layoutY="242.0" text="передачи аналогового предусилителя" />
-      <TextField fx:id="coeffAnalogueAmplifier" layoutX="907.0" layoutY="231.0" prefHeight="25.0" prefWidth="68.0" text="25" />
-      <Label layoutX="547.0" layoutY="229.0" text="Введите значение коэффциента" />
-      <Label layoutX="988.0" layoutY="158.0" text="А*час" />
-      <TextField fx:id="capacitanceOfBattery" layoutX="907.0" layoutY="153.0" prefHeight="25.0" prefWidth="68.0" text="75" />
-      <Label layoutX="545.0" layoutY="151.0" text="(укажите ёмкость одного аккумулятора)" />
-      <Label layoutX="545.0" layoutY="132.0" text="Введите паспортную ёмкость для марки используемых аккумуляторов" />
-      <Label layoutX="555.0" layoutY="82.0" text="Максимальный ток шунта" />
-      <TextField fx:id="maxCurrentShunt" layoutX="908.0" layoutY="81.0" prefHeight="25.0" prefWidth="68.0" text="400" />
-      <Label layoutX="997.0" layoutY="86.0" text="A" />
-      <Label layoutX="995.0" layoutY="46.0" text="mV" />
-      <TextField fx:id="maxVoltShunt" layoutX="908.0" layoutY="41.0" prefHeight="25.0" prefWidth="68.0" text="60" />
-      <Label layoutX="555.0" layoutY="42.0" text="Максимальное напряжение шунта" />
+      <Label layoutX="558.0" layoutY="397.0" text="(значение относительно номинального тока)" />
+      <TextField fx:id="thresholdBoostEnding" layoutX="945.0" layoutY="382.0" prefHeight="25.0" prefWidth="68.0" text="0.25" />
+      <Label layoutX="558.0" layoutY="384.0" text="6.7 Задайте условие окончания ускоренного заряда" />
+      <Label layoutX="558.0" layoutY="346.0" text="6.6 Задайте порог применения ускоренного заряда" />
+      <TextField fx:id="thresholdForBoost" layoutX="945.0" layoutY="344.0" prefHeight="25.0" prefWidth="68.0" text="0.9" />
+      <Label layoutX="558.0" layoutY="359.0" text="(значение относительно номинального тока)" />
+      <Label layoutX="558.0" layoutY="309.0" text="6.5 Задайте предельный ток заряда" />
+      <TextField fx:id="maxChargCurrent" layoutX="943.0" layoutY="309.0" prefHeight="25.0" prefWidth="68.0" text="3.5" />
+      <Label layoutX="558.0" layoutY="322.0" text="(значение относительно номинального тока)" />
+      <Label layoutX="558.0" layoutY="289.0" text="(значение относительно номинального тока)" />
+      <TextField fx:id="chargingCurrent" layoutX="942.0" layoutY="272.0" prefHeight="25.0" prefWidth="68.0" text="2.8" />
+      <Label layoutX="558.0" layoutY="276.0" text="6.4 Задайте ток заряда" />
+      <Label layoutX="556.0" layoutY="246.0" text="передачи аналогового предусилителя" />
+      <TextField fx:id="coeffAnalogueAmplifier" layoutX="941.0" layoutY="232.0" prefHeight="25.0" prefWidth="68.0" text="25" />
+      <Label layoutX="558.0" layoutY="233.0" text="6.3 Введите значение коэффциента" />
+      <Label layoutX="1022.0" layoutY="159.0" text="А*час" />
+      <TextField fx:id="capacitanceOfBattery" layoutX="941.0" layoutY="154.0" prefHeight="25.0" prefWidth="68.0" text="75" />
+      <Label layoutX="556.0" layoutY="155.0" text="(укажите ёмкость одного аккумулятора)" />
+      <Label layoutX="556.0" layoutY="136.0" text="6.1 Введите паспортную ёмкость для марки используемых аккумуляторов" />
+      <Label layoutX="557.0" layoutY="82.0" text="5.2 Максимальный ток шунта" />
+      <TextField fx:id="maxCurrentShunt" layoutX="942.0" layoutY="82.0" prefHeight="25.0" prefWidth="68.0" text="400" />
+      <Label layoutX="1031.0" layoutY="87.0" text="A" />
+      <Label layoutX="1029.0" layoutY="47.0" text="mV" />
+      <TextField fx:id="maxVoltShunt" layoutX="942.0" layoutY="42.0" prefHeight="25.0" prefWidth="68.0" text="60" />
+      <Label layoutX="557.0" layoutY="42.0" text="5.1 Максимальное напряжение шунта" />
       <Label layoutX="667.0" layoutY="10.0" prefHeight="15.0" prefWidth="323.0" text="Введите параметры шунта (в цепи батарей)" />
       <Line endX="750.0" endY="-0.0" layoutX="160.0" layoutY="375.0" rotate="90.0" />
       <Label layoutX="233.0" layoutY="399.0" text="(мВ на элемент)" />
-      <Label layoutX="547.0" layoutY="186.0" text="Укажите число параллельных цепочек" />
-      <TextField fx:id="numberBattery" layoutX="907.0" layoutY="189.0" prefHeight="25.0" prefWidth="68.0" text="4" />
-      <Label layoutX="547.0" layoutY="199.0" text="из аккумуляторов" />
-      <TextField fx:id="timeInBoost" layoutX="911.0" layoutY="421.0" prefHeight="25.0" prefWidth="68.0" text="480" />
-      <Label layoutX="547.0" layoutY="427.0" text="Введите время работы в режиме Boost" />
-      <Label layoutX="988.0" layoutY="426.0" text="мин" />
-      <Label layoutX="988.0" layoutY="459.0" text="мин" />
-      <Label layoutX="546.0" layoutY="453.0" text="Введите время задержки повторного включения" />
-      <TextField fx:id="delayBoost" layoutX="911.0" layoutY="454.0" prefHeight="25.0" prefWidth="68.0" text="15" />
-      <Label layoutX="546.0" layoutY="465.0" text="режима Boost" />
+      <Label layoutX="558.0" layoutY="190.0" text="6.2 Укажите число параллельных цепочек" />
+      <TextField fx:id="numberBattery" layoutX="941.0" layoutY="190.0" prefHeight="25.0" prefWidth="68.0" text="4" />
+      <Label layoutX="558.0" layoutY="203.0" text="из аккумуляторов" />
+      <TextField fx:id="timeInBoost" layoutX="945.0" layoutY="422.0" prefHeight="25.0" prefWidth="68.0" text="480" />
+      <Label layoutX="558.0" layoutY="431.0" text="6.8 Введите время работы в режиме Boost" />
+      <Label layoutX="1022.0" layoutY="427.0" text="мин" />
+      <Label layoutX="1022.0" layoutY="460.0" text="мин" />
+      <Label layoutX="557.0" layoutY="457.0" text="6.9 Введите время задержки повторного включения" />
+      <TextField fx:id="delayBoost" layoutX="945.0" layoutY="455.0" prefHeight="25.0" prefWidth="68.0" text="15" />
+      <Label layoutX="557.0" layoutY="469.0" text="режима Boost" />
       <Button fx:id="showGraph" layoutX="333.0" layoutY="564.0" mnemonicParsing="false" onAction="#handleShowGraph" text="Показать график" />
       <Line endX="415.0" layoutX="110.0" layoutY="555.0" startX="-100.0" AnchorPane.bottomAnchor="195.0" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="554.0" />
       <Line endX="415.0" layoutX="110.0" layoutY="107.0" startX="-100.0" AnchorPane.bottomAnchor="642.5" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="106.5" />
