--- a/src/main/resources/first_screen.fxml
+++ b/src/main/resources/first_screen.fxml
@@ -31,7 +31,7 @@
       <Label layoutX="110.0" layoutY="282.0" text="Введите температурные данные для режима Boost" />
       <Label layoutX="475.0" layoutY="312.0" text="град. С" />
       <TextField fx:id="minTempBoost" layoutX="367.0" layoutY="307.0" prefHeight="25.0" prefWidth="98.0" text="30" />
-      <Label layoutX="14.0" layoutY="312.0" text="2.5 Задайте минимальное значение температуры" />
+      <Label layoutX="14.0" layoutY="312.0" text="2.5 Задайте точку излома характеристики" />
       <Label layoutX="14.0" layoutY="346.0" text="2.6 Задайте максимальное значение температуры" />
       <TextField fx:id="maxTempBoost" layoutX="367.0" layoutY="341.0" prefHeight="25.0" prefWidth="98.0" text="45" />
       <Label layoutX="475.0" layoutY="346.0" text="град. С" />
@@ -54,17 +54,17 @@
       <TextField fx:id="coefficientOfCalibration" layoutX="434.0" layoutY="631.0" prefHeight="25.0" prefWidth="83.0" text="1.108" />
       <Label layoutX="14.0" layoutY="611.0" text="4. Задайте коэффициент преобразования базовой шкалы &quot;мВ на элемент&quot;" />
       <Label layoutX="14.0" layoutY="636.0" text="для получения калиброванного управляющего напряжения" />
-      <Label layoutX="558.0" layoutY="397.0" text="(значение относительно номинального тока)" />
-      <TextField fx:id="thresholdBoostEnding" layoutX="945.0" layoutY="382.0" prefHeight="25.0" prefWidth="68.0" text="0.25" />
-      <Label layoutX="558.0" layoutY="384.0" text="6.7 Задайте условие окончания ускоренного заряда" />
-      <Label layoutX="558.0" layoutY="346.0" text="6.6 Задайте порог применения ускоренного заряда" />
-      <TextField fx:id="thresholdForBoost" layoutX="945.0" layoutY="344.0" prefHeight="25.0" prefWidth="68.0" text="0.9" />
-      <Label layoutX="558.0" layoutY="359.0" text="(значение относительно номинального тока)" />
+      <Label layoutX="557.0" layoutY="437.0" text="(значение относительно номинального тока)" />
+      <TextField fx:id="thresholdBoostEnding" layoutX="944.0" layoutY="422.0" prefHeight="25.0" prefWidth="68.0" text="0.25" />
+      <Label layoutX="557.0" layoutY="424.0" text="6.8 Задайте условие окончания ускоренного заряда" />
+      <Label layoutX="557.0" layoutY="386.0" text="6.7 Задайте порог применения ускоренного заряда" />
+      <TextField fx:id="thresholdForBoost" layoutX="944.0" layoutY="384.0" prefHeight="25.0" prefWidth="68.0" text="0.9" />
+      <Label layoutX="557.0" layoutY="399.0" text="(значение относительно номинального тока)" />
       <Label layoutX="558.0" layoutY="309.0" text="6.5 Задайте предельный ток заряда" />
-      <TextField fx:id="maxChargCurrent" layoutX="943.0" layoutY="309.0" prefHeight="25.0" prefWidth="68.0" text="3.5" />
+      <TextField fx:id="maxChargCurrent" layoutX="943.0" layoutY="309.0" prefHeight="25.0" prefWidth="68.0" text="5.0" />
       <Label layoutX="558.0" layoutY="322.0" text="(значение относительно номинального тока)" />
       <Label layoutX="558.0" layoutY="289.0" text="(значение относительно номинального тока)" />
-      <TextField fx:id="chargingCurrent" layoutX="942.0" layoutY="272.0" prefHeight="25.0" prefWidth="68.0" text="2.8" />
+      <TextField fx:id="chargingCurrent" layoutX="942.0" layoutY="272.0" prefHeight="25.0" prefWidth="68.0" text="2.7" />
       <Label layoutX="558.0" layoutY="276.0" text="6.4 Задайте ток заряда" />
       <Label layoutX="556.0" layoutY="246.0" text="передачи аналогового предусилителя" />
       <TextField fx:id="coeffAnalogueAmplifier" layoutX="941.0" layoutY="232.0" prefHeight="25.0" prefWidth="68.0" text="25" />
@@ -85,16 +85,19 @@
       <Label layoutX="558.0" layoutY="190.0" text="6.2 Укажите число параллельных цепочек" />
       <TextField fx:id="numberBattery" layoutX="941.0" layoutY="190.0" prefHeight="25.0" prefWidth="68.0" text="4" />
       <Label layoutX="558.0" layoutY="203.0" text="из аккумуляторов" />
-      <TextField fx:id="timeInBoost" layoutX="945.0" layoutY="422.0" prefHeight="25.0" prefWidth="68.0" text="480" />
-      <Label layoutX="558.0" layoutY="431.0" text="6.8 Введите время работы в режиме Boost" />
-      <Label layoutX="1022.0" layoutY="427.0" text="мин" />
-      <Label layoutX="1022.0" layoutY="460.0" text="мин" />
-      <Label layoutX="557.0" layoutY="457.0" text="6.9 Введите время задержки повторного включения" />
-      <TextField fx:id="delayBoost" layoutX="945.0" layoutY="455.0" prefHeight="25.0" prefWidth="68.0" text="15" />
-      <Label layoutX="557.0" layoutY="469.0" text="режима Boost" />
+      <TextField fx:id="timeInBoost" layoutX="944.0" layoutY="462.0" prefHeight="25.0" prefWidth="68.0" text="480" />
+      <Label layoutX="557.0" layoutY="471.0" text="6.9 Введите время работы в режиме Boost" />
+      <Label layoutX="1021.0" layoutY="467.0" text="мин" />
+      <Label layoutX="1021.0" layoutY="500.0" text="мин" />
+      <Label layoutX="556.0" layoutY="497.0" text="6.10 Введите время задержки повторного включения" />
+      <TextField fx:id="delayBoost" layoutX="944.0" layoutY="495.0" prefHeight="25.0" prefWidth="68.0" text="15" />
+      <Label layoutX="556.0" layoutY="509.0" text="режима Boost" />
       <Button fx:id="showGraph" layoutX="333.0" layoutY="564.0" mnemonicParsing="false" onAction="#handleShowGraph" text="Показать график" />
       <Line endX="415.0" layoutX="110.0" layoutY="555.0" startX="-100.0" AnchorPane.bottomAnchor="195.0" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="554.0" />
       <Line endX="415.0" layoutX="110.0" layoutY="107.0" startX="-100.0" AnchorPane.bottomAnchor="642.5" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="106.5" />
       <Line endX="10.0" layoutX="400.0" layoutY="560.0" rotate="90.0" AnchorPane.bottomAnchor="189.5" AnchorPane.leftAnchor="399.5" AnchorPane.topAnchor="559.5" />
+      <Label layoutX="558.0" layoutY="360.0" text="(значение относительно номинального тока)" />
+      <TextField fx:id="upThresholdCurrent" layoutX="943.0" layoutY="347.0" prefHeight="25.0" prefWidth="68.0" text="3.7" />
+      <Label layoutX="558.0" layoutY="347.0" text="6.6 Задайте верхний порог ограничения тока" />
    </children>
 </AnchorPane>
